[package]
name = "mlflow-client"
version = "0.0.1"
edition = "2021"
authors = ["frozenlib <frozenlib@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frozenlib/mlflow-client"
documentation = "https://docs.rs/mlflow-client/"
keywords = ["mlflow", "logging", "machine-learning"]
categories = ["api-bindings", "visualization"]
description = "MLflow REST API client (unofficial)"

[dependencies]
derive-ex = "0.1.8"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
url = "2.5.4"
ordered-float = "4.5.0"

[dev-dependencies]
tempdir = "0.3.7"
anyhow = "1.0.93"
fs2 = "0.4.3"

[workspace]
members = ["mlflow-runner"]
